2011-02-11 Maxim
- UI.WebVision: Widget's position remnant is acquired for internal points coordinates calc of primitive "ElFigure".


2011-02-11 Roman
- UI.Vision: Widget's position remnant is acquired for internal points coordinates calc of primitive "ElFigure".
- DAQ.BFN, DAQ.BlockCalc: All warnings is resolved for "-Wall" compile option.


2011-02-08 Roman
- !!:FIX:Archive: Using soft grid buffer for high and low resolution time is fixed for archiving.
- FIX:Config: Copy heterogenous nodes config properties is fixed.
- !!:Transport.*, Protocol.*, Special.*, DAQ.AMRDevs: All warnings is resolved for "-Wall" compile option.
- DAQ.ModBus: Syntax highlight rules is some updated. DAQ parameter's attributes list help is supplemented.
- FIX:Transport.Serial: Set O_NONBLOCK flag to function open() of serial device, for prevent it hang on several USB->RS485 converters.
- UI.VCAEngine: Included widgets counter and pages into a progect and into other pages is added.


2011-02-07 Roman
- DAQ.System: The library libsensors disable is added for no allowed the library.
- FIX:DAQ.System: Crash is fixed on exit for source "Hddtemp" exeptions at it destroy.
- TArchives, Archive.FSArch: Multiscan for an archive directory is disabled at the program start.
- !!:DB: User API functions fieldStruct(), fieldSeek(), fieldGet(), fieldSet() and fieldDel() for Table object is added.
- !!DB.*: All warnings is resolved for "-Wall" compile option.


2011-02-04 Roman
- Transport.Serial: Port init is made using previous properties and allow for miss any port properties set.


2011-02-01 Roman
- SYS: Build with all warning show is enabled for RPM-packages.
- SYS: The default start OpenSCADA scripts "openscada_start" "openscada_demo" and "openscada_demo_local" is adapted
    for use simple shell and don't use tool install, on busybox.
- FIX:SYS: Code clear for all source code:
    - remove not used variables;
    - add returns for all functions with return;